Header and Footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,13 +13,13 @@ import App from "../icons/App.astro"
                     <a href="#" class="hover:underline decoration-lime-500 me-4 md:me-6">Inicio</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline decoration-lime-500 me-4 md:me-6">Proyectos</a>
+                    <a href="#Experiencia" class="hover:underline decoration-lime-500 me-4 md:me-6">Experiencia</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline decoration-lime-500 me-4 md:me-6">Sobre mi</a>
+                    <a href="#Proyectos" class="hover:underline decoration-lime-500 me-4 md:me-6">Proyectos</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:underline decoration-lime-500">Contacto</a>
+                    <a href="#Sobre_mi" class="hover:underline decoration-lime-500">Sobre mi</a>
                 </li>
             </ul>
         </div>
