--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ import Cards_P from '../components/Cards_P.astro'
 
 			</section>
 	
-			<section id="proyectos" class="w-full mx-auto lg:w-[740px] ">
+			<section id="Proyectos" class="w-full mx-auto lg:w-[740px] pt-10">
 				<h2 class=" text-2xl mb-5 font-bold"> Poyectos</h2>
 				
 				<Cards_P/>
@@ -80,7 +80,7 @@ import Cards_P from '../components/Cards_P.astro'
 
 			</section>
 
-			<section id="Sobre_mi" class="w-full mx-auto lg:w-[740px]">
+			<section id="Sobre_mi" class="w-full mx-auto lg:w-[740px] pt-10">
 				<h2 class=" text-2xl mb-5 font-bold"> Sobre mi</h2>
 				
 
