--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@
     <nav class="flex flex-row gap-x-10 justify-center items-center rounded-full px-6 py-1 bg-indigo-950/80 border border-lime-500/60">
         <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="#">Inicio</a>
         <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="#Experiencia">Experiencia</a>
+        <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="#Proyectos">Proyectos</a>
         <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="#Sobre_mi">Sobre mi</a>
-        <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="/">Contacto</a>
     </nav>
 </header>
 
