--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,10 @@
 ---
 import App from "../icons/App.astro"
 ---
-<footer class="bg-gray-900 rounded-full shadow  m-4">
+<footer class="bg-gray-900 rounded-md md:rounded-full shadow  m-4">
     <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between px-7">
-            <a href="/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse"> 
+            <a href="#" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse"> 
                 <App class=" size-8 text-lime-400"/>
                 <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">Portafolio Web</span>
             </a>
@@ -24,7 +24,8 @@ import App from "../icons/App.astro"
             </ul>
         </div>
         <hr class="my-6 border-lime-500 sm:mx-auto  lg:my-8" />
-        <span class="block text-sm sm:text-center text-gray-400">© 2024 <a href="/" class="hover:underline decoration-lime-500">Byron</a></span>
+        
+        <span class="block text-sm text-center text-gray-400">© 2024 <a href="/" class="hover:underline decoration-lime-500">Byron</a></span>
     </div>
 </footer>
 
