--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,14 +86,18 @@ import Cards_P from '../components/Cards_P.astro'
 
 				<div class="grid mb-8 border rounded-lg shadow-sm border-green-500 md:mb-12 md:grid-cols-2 bg-gray-900">
 					<figure class="flex flex-col col-span-2 items-center justify-center p-8 text-center border-b  rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e bg-gray-900  border-green-500">
-						<Carousel></Carousel>
+						{/* <Carousel></Carousel>*/}
+						{/*<img src="/images/Titulacion.jpg" alt=""> */}
+						<div class="h-80 relative overflow-hidden flex justify-center items-center rounded-lg">
+							<img src="/images/Titulacion.jpg" alt="" class="sm:mt-36 lg:mt-44 ">
+						</div>
 					</figure>
 					<figure class="flex flex-col col-span-2 items-center justify-center p-8 text-center border-b  rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e bg-gray-900  border-green-500">
 						<blockquote class="max-w-2xl mx-auto mb-4 lg:mb-8 text-gray-300">
-							<div class="text-base">
-								<p class="my-4 text-pretty">¡Hola! Mi nombre es <span class=" text-lime-300">Byron Huerta</span>, egresado en <span class="text-lime-300/85">Ingeniería en Informática</span> y <span class="text-lime-300/85">Analista Programador Computacional</span>, con una pasión inquebrantable por el desarrollo y el mundo digital</p>
-								<p class="my-4 text-pretty">Destaco en <span class="text-yellow-200/85">colaboración</span> y <span class="text-yellow-200/85">trabajo en equipo</span>, como se evidencia en mi experiencia en <span class="text-yellow-200/95">Arcadius Entertainment</span> y <span class="text-yellow-200/95">Duoc UC</span>, logrando el desarrollo efectivo en las metas de ambos casos.</p>
-								<p class="my-4 text-pretty">Mi capacidad para <span class="text-emerald-400/90">adaptarme rápidamente</span> me han permitido contribuir de manera <span class="text-emerald-400/90">efectiva</span> en proyectos prácticos durante mi formación. Estoy emocionado por la oportunidad de aplicar mis <span class="text-emerald-400">habilidades</span> y <span class="text-emerald-400">crecer profesionalmente</span>, colaborando con un equipo apasionado para<span class=" text-cyan-400"> alcanzar el éxito.</span> </p>
+							<div class="text-sm md:text-base">
+								<p class="my-2 md:my-4 text-pretty">¡Hola! Mi nombre es <span class=" text-lime-300">Byron Huerta</span>, egresado en <span class="text-lime-300/85">Ingeniería en Informática</span> y <span class="text-lime-300/85">Analista Programador Computacional</span>, con una pasión inquebrantable por el desarrollo y el mundo digital</p>
+								<p class="my-2 md:my-4 text-pretty">Destaco en <span class="text-yellow-200/85">colaboración</span> y <span class="text-yellow-200/85">trabajo en equipo</span>, como se evidencia en mi experiencia en <span class="text-yellow-200/95">Arcadius Entertainment</span> y <span class="text-yellow-200/95">Duoc UC</span>, logrando el desarrollo efectivo en las metas de ambos casos.</p>
+								<p class="my-2 md:my-4 text-pretty">Mi capacidad para <span class="text-emerald-400/90">adaptarme rápidamente</span> me han permitido contribuir de manera <span class="text-emerald-400/90">efectiva</span> en proyectos prácticos durante mi formación. Estoy emocionado por la oportunidad de aplicar mis <span class="text-emerald-400">habilidades</span> y <span class="text-emerald-400">crecer profesionalmente</span>, colaborando con un equipo apasionado para<span class=" text-cyan-400"> alcanzar el éxito.</span> </p>
 							</div>
 							
 						</blockquote>
