--- a/src/components/Cards_P.astro
+++ b/src/components/Cards_P.astro
@@ -76,58 +76,60 @@ const Projects =[
 
 
 ---
-<div class=" grid grid-cols-2 gap-2">
+<div class=" grid md:grid-cols-2 sm:gap-2">
     { 
         Projects.map(({title,src,tags, linkGit, linkWeb}) => (
             
-            
-            <div class=" col-span-1 group w-[360px] mb-4 bg-gray-8900 border border-green-500 rounded-lg shadow-md  hover:shadow-lg hover:shadow-lime-700 transition bg-gray-900">
+            <div class="flex justify-center md:justify-normal">
+                <div class=" group w-full md:w-[360px] mb-4 bg-gray-8900 border border-green-500 rounded-lg shadow-md  hover:shadow-lg hover:shadow-lime-700 transition bg-gray-900">
     
-                <div class=" p-1 flex justify-center shadow-pink-700  drop-shadow-xl transition duration-500">
-                    <img class="rounded-lg w-full transition duration-300" src={src} alt="" />
-                </div>
-    
-                <div class="p-2 mb-2">
-                    <div class=" flex justify-center mb-3">
-                        <span class="bg-clip-text text-transparent bg-gradient-to-r from-teal-400 to-lime-300">
-                            <h3 class="font-bold   text-xl lg:text-2xl">{title}</h3>
-                        </span>
-                        
-                                               
+                    <div class=" p-1 flex justify-center shadow-pink-700  drop-shadow-xl transition duration-500">
+                        <img class="rounded-lg w-full transition duration-300" src={src} alt="" />
                     </div>
-                    
-                  
-                    <ul class="flex gap-x-2 flex-wrap justify-center mb-3">
-    
-                        {tags.map((tag) =>( 
-                        <li>
-                            <span class={`flex gap-x-2 rounded-full bg-slate-900 px-2 py-1 mb-2 text-xs items-center border border-green-600 transition duration-500  ${tag.class}`}>
-                                <tag.icon class=" size-5 brightness-100 transition duration-500 "/>
-                                {tag.name}
+
+                    <div class="p-2 mb-2">
+                        <div class=" flex justify-center mb-3">
+                            <span class="bg-clip-text text-transparent bg-gradient-to-r from-teal-400 to-lime-300">
+                                <h3 class="font-bold   text-xl lg:text-2xl">{title}</h3>
                             </span>
-                        </li>
-                    ))}
-                    </ul>
+                            
+                                                
+                        </div>
+                        
                     
-                    <div class="flex justify-around">
+                        <ul class="flex gap-x-2 flex-wrap justify-center mb-3">
+
+                            {tags.map((tag) =>( 
+                            <li>
+                                <span class={`flex gap-x-2 rounded-full bg-slate-900 px-2 py-1 mb-2 text-xs items-center border border-green-600 transition duration-500  ${tag.class}`}>
+                                    <tag.icon class=" size-5 brightness-100 transition duration-500 "/>
+                                    {tag.name}
+                                </span>
+                            </li>
+                        ))}
+                        </ul>
                         
-                        {    
-                            linkGit && 
-                            <a  href={linkGit} target="_blank" type="button" class=" group/git border hover:border-lime-300  rounded-full size-10 flex justify-center items-center  ">
-                                <Git class=" group-hover/git:text-lime-300"/>
-                            </a> 
-                        }
-                        
-                        {
-                            linkWeb && 
-                            <a  href={linkWeb} target="_blank" type="button" class=" group/web border hover:border-sky-300  rounded-full size-10 flex justify-center items-center  ">
-                                <Website class=" group-hover/web:text-sky-300 "/>
-                            </a>
-                        }
-                        
+                        <div class="flex justify-around">
+                            
+                            {    
+                                linkGit && 
+                                <a  href={linkGit} target="_blank" type="button" class=" group/git border hover:border-lime-300  rounded-full size-10 flex justify-center items-center  ">
+                                    <Git class=" group-hover/git:text-lime-300"/>
+                                </a> 
+                            }
+                            
+                            {
+                                linkWeb && 
+                                <a  href={linkWeb} target="_blank" type="button" class=" group/web border hover:border-sky-300  rounded-full size-10 flex justify-center items-center  ">
+                                    <Website class=" group-hover/web:text-sky-300 "/>
+                                </a>
+                            }
+                            
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div>    
+           
      
             
            
