--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -72,7 +72,7 @@ const Projects =[
     {
         title: "PH Construcción",
         date:"Mar/2024 - Mar/2024",
-        src:"/images/PH.png",
+        src:"/images/PH.webp",
         description: "Desarrollo de una página web estática para un constructor independiente, enfocada en mostrar sus trabajos anteriores de construcción y remodelación. La página incluye una sección dedicada a promocionar un artículo en venta",
         tags: [TAGS.HTML5,TAGS.CSS, TAGS.JAVASCRIPT, TAGS.REACT,TAGS.TAILWIND],
         link: "https://phconstruccion.netlify.app"
