--- a/src/components/Cards_P.astro
+++ b/src/components/Cards_P.astro
@@ -51,7 +51,7 @@ const TAGS = {
 const Projects =[
     {
         title: "Epic_7_Academy",
-        src:"images/EpicApp.png",
+        src:"images/EpicApp.webp",
         tags: [TAGS.React, TAGS.HTML5,TAGS.JAVASCRIPT,TAGS.CSS, TAGS.TAILWIND],
         linkGit: "https://github.com/LegenB/Epic_7_Academy",
         linkWeb: ""
@@ -65,7 +65,7 @@ const Projects =[
     },
     {
         title: "Gif-App",
-        src:"images/gifapp.png",
+        src:"images/gifapp.webp",
         tags: [TAGS.React, TAGS.HTML5,TAGS.JAVASCRIPT,TAGS.CSS],
         linkGit: "https://github.com/LegenB/Gif-App",
         linkWeb: "https://heartfelt-moonbeam-d0fd56.netlify.app"
@@ -84,7 +84,7 @@ const Projects =[
                 <div class=" group w-full md:w-[360px] mb-4 bg-gray-8900 border border-green-500 rounded-lg shadow-md  hover:shadow-lg hover:shadow-lime-700 transition bg-gray-900">
     
                     <div class=" p-1 flex justify-center shadow-pink-700  drop-shadow-xl transition duration-500">
-                        <img class="rounded-lg w-full transition duration-300" src={src} alt="" />
+                        <img class="rounded-lg w-full transition duration-300" src={src} alt="proyect img..." loading="lazy"/>
                     </div>
 
                     <div class="p-2 mb-2">
