--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,7 +115,7 @@ import Cards_P from '../components/Cards_P.astro'
 						{/* <Carousel></Carousel>*/}
 						{/*<img src="/images/Titulacion.jpg" alt=""> */}
 						<div class="h-80 relative overflow-hidden flex justify-center items-center rounded-lg">
-							<img src="/images/Titulacion.jpg" alt="" class="sm:mt-36 lg:mt-44 ">
+							<img src="/images/Titulacion.webp" alt="" class="sm:mt-36 lg:mt-44 " loading="lazy">
 						</div>
 					</figure>
 					<figure class="flex flex-col col-span-2 items-center justify-center p-8 text-center border-b  rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e bg-gray-900  border-green-500">
