Carta de Recomendacion

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,6 +46,7 @@ import Cards_P from '../components/Cards_P.astro'
 						</div>
 						</a> 
 					</h1>
+					<hr class=" -mt-12 pt-8 border-slate-600 ">
 					<div class=" -mt-5 ">
 						<h2 class=" text-base md:text-lg lg:text-xl opacity-90 flex justify-center flex-col lg:flex-row items-center text-wrap">
 							<span class=" mr-0 lg:mr-3  " >Egresado en  Ingeniería en Informática</span> <Badge>Disponible para trabajar</Badge>
@@ -65,6 +66,7 @@ import Cards_P from '../components/Cards_P.astro'
 						</nav>
 
 					</div>
+					
 					
 
 				</div>
