--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -67,7 +67,8 @@ const Projects =[
         src:"https://cdn.cloudflare.steamstatic.com/steam/apps/2198620/capsule_616x353.jpg?t=1697652143",
         description: "Juego de rol y supervivencia medieval de Arcadius Entertainment. Fui encargado de la secuencia de inicio trabajé mucho con widget blueprint y conexión con la plataforma PlayFab para administrar los datos de los jugadores (CRUD).",
         tags: [TAGS.UNREALENGINE,TAGS.PLAYFAB,TAGS.CLOUDSCRIPT],
-        link: ""
+        link: "",
+        rec: "/Doc/CartaBH.pdf"
     },
     {
         title: "PH Construcción",
@@ -75,7 +76,8 @@ const Projects =[
         src:"/images/PH.webp",
         description: "Desarrollo de una página web estática para un constructor independiente, enfocada en mostrar sus trabajos anteriores de construcción y remodelación. La página incluye una sección dedicada a promocionar un artículo en venta",
         tags: [TAGS.HTML5,TAGS.CSS, TAGS.JAVASCRIPT, TAGS.REACT,TAGS.TAILWIND],
-        link: "https://phconstruccion.netlify.app"
+        link: "https://phconstruccion.netlify.app",
+        rec: ""
     }
 
 ]
@@ -84,7 +86,7 @@ const Projects =[
 ---
 
 {
-    Projects.map(({title,date,src,description,tags,link}) => (
+    Projects.map(({title,date,src,description,tags,link,rec}) => (
         
 
         <div class="group lg:w-[740px]  bg-gray-8900 border border-green-500 rounded-lg shadow-md  hover:shadow-lg hover:shadow-lime-700 transition bg-gray-900">
@@ -117,13 +119,22 @@ const Projects =[
                 ))}
                 </ul>
                 <br>
-                <div class="text-center lg:text-left  md:text-left">
-                    
-                    <a href={link} target="_blank" type="button" class=" text-black bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br shadow-lg shadow-lime-500/40 font-medium rounded-lg text-sm px-7 py-2.5">
-                        Ir a ver...
-                    </a>
-                    
-                </div>
+                {    
+                    link && 
+                    <div class="text-center lg:text-left  md:text-left">                   
+                        <a href={link} target="_blank" type="button" class=" text-black bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br shadow-lg shadow-lime-500/40 font-medium rounded-lg text-sm px-7 py-2.5">
+                            Ir a ver...
+                        </a>
+                    </div>
+                }
+                {    
+                    rec && 
+                    <div class="text-center lg:text-left  md:text-left">                   
+                        <a  href={rec} download="Carta de Recomendacion Byron Mauricio Huerta Olmos" type="button" class=" text-black bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br shadow-lg shadow-lime-500/40 font-medium rounded-lg text-sm px-7 py-2.5">
+                            Descargar Recomendacion
+                        </a>
+                    </div>
+                }
             </div>
         </div>
         <br>
