--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 
 
-<header class="fixed top-0  flex justify-center items-center py-2 w-full mx-auto drop-shadow-lg z-50">
+<header class="fixed top-0  flex justify-center items-center py-2 w-full mx-auto drop-shadow-lg z-50 animate-fade-down animate-ease-out">
     <nav class="flex flex-row gap-x-4 md:gap-x-10 justify-center items-center rounded-full px-6 py-1 bg-indigo-950/80 border border-lime-500/60">
         <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="#">Inicio</a>
         <a class="hover:text-lime-400 text-sm lg:text-base xl:text-base 2xl:text-base " href="#Experiencia">Experiencia</a>
