--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,10 @@ import Cards_P from '../components/Cards_P.astro'
 	<main class=" px-5">
 
 			<section class=" h-screen w-full mx-auto lg:w-[740px] pt-20 lg:py-32">
-				<div class=" relative flex justify-center z-10">
+				<div class=" relative flex justify-center z-0">
 					<div class="  bg-gradient-to-r from-cyan-500/50 to-blue-500/50 border border-sky-300/50 rounded-t-full w-60 pt-4">
 
-						<div class="flex justify-center ">
+						<div class="flex justify-center animate-fade-up animate-delay-200 animate-ease-out">
 							<img class="rounded-t-full w-44 h-44 transition"src="/images/yo.jpg" alt="photo" >
 						</div>
 	
@@ -32,7 +32,7 @@ import Cards_P from '../components/Cards_P.astro'
 				<div class=" relative bg-gradient-to-r from-gray-800 to-slate-800  border-2 border-slate-600 p-4 rounded-xl sm:rounded-full z-10">
 
 					
-					<h1 class="text-white text-xl md:text-3xl lg:text-4xl font-bold flex flex-row justify-center">	
+					<h1 class="text-white text-xl md:text-3xl lg:text-4xl font-bold flex flex-row justify-center animate-fade animate-delay-100 animate-ease-in">	
 						<a 
 						href="https://www.linkedin.com/in/byron-huerta-olmos-9072b4219/"
 						target="_blank"
@@ -48,21 +48,26 @@ import Cards_P from '../components/Cards_P.astro'
 					</h1>
 					<hr class=" -mt-12 pt-8 border-slate-600 ">
 					<div class=" -mt-5 ">
-						<h2 class=" text-base md:text-lg lg:text-xl opacity-90 flex justify-center flex-col lg:flex-row items-center text-wrap">
+						<h2 class=" text-base md:text-lg lg:text-xl opacity-90 flex justify-center flex-col lg:flex-row items-center text-wrap animate-fade animate-delay-100 animate-ease-in">
 							<span class=" mr-0 lg:mr-3  " >Egresado en  Ingeniería en Informática</span> <Badge>Disponible para trabajar</Badge>
 						</h2>
 		
 						<nav class="flex gap-4 mt-6 flex-wrap justify-center">
-							<Socialpill href="/Doc/Byron_CV.pdf" download="ByronHuerta_CV">
-								<Download class="size-5  lg:size-6 "/> <p class="text-sm md:text-base">Descargar CV</p>				
-							</Socialpill>
-							<Socialpill href="https://www.linkedin.com/in/byron-huerta-olmos-9072b4219/">
-								<Likedin class="size-5 lg:size-6"/> <p class="text-sm md:text-base">Likedin</p>					
-							</Socialpill>
-							<Socialpill href="https://github.com/LegenB">
-								<GitHub class="size-5 lg:size-6"/> <p class="text-sm md:text-base">GitHub</p>					
-							</Socialpill>
-							
+							<div class="animate-fade animate-delay-300 animate-ease-in">
+								<Socialpill  href="/Doc/Byron_CV.pdf" download="ByronHuerta_CV">
+									<Download class="size-5  lg:size-6 "/> <p class="text-sm md:text-base">Descargar CV</p>				
+								</Socialpill>
+							</div>
+							<div class="animate-fade animate-delay-[600ms] animate-ease-in">
+								<Socialpill href="https://www.linkedin.com/in/byron-huerta-olmos-9072b4219/">
+									<Likedin class="size-5 lg:size-6"/> <p class="text-sm md:text-base">Likedin</p>					
+								</Socialpill>
+							</div>
+							<div class="animate-fade animate-delay-[900ms] animate-ease-in">
+								<Socialpill href="https://github.com/LegenB">
+									<GitHub class="size-5 lg:size-6"/> <p class="text-sm md:text-base">GitHub</p>					
+								</Socialpill>
+							</div>
 						</nav>
 
 					</div>
@@ -70,7 +75,8 @@ import Cards_P from '../components/Cards_P.astro'
 					
 
 				</div>
-				<div class="relative flex justify-center items-center z-0 "> 
+
+				<div class="relative flex justify-center items-center z-0 animate-flip-down animate-delay-200 "> 
 					
 					<div class="w-0 h-0 -mt-14  
 						border-l-[90px] border-l-transparent rounded-l-2xl
